modified index.html and dom.js

--- a/Document Object Model - 1/index.html
+++ b/Document Object Model - 1/index.html
@@ -13,6 +13,10 @@
     <h1>BAŞLIK 3</h1>
     <h1>BAŞLIK 4</h1>
     <h1>BAŞLIK 5</h1>
+    <button id="btn" onclick="clickHandle(this)">BUTTON</button>
+    <button id="btn2" onclick="clickHandle(this)">BUTTON 2 </button>
+    <hr>
+    <input id="name" type="password" placeholder="Şifrenizi giriniz...">
 
 <script src="dom.js"></script>
 </body>
